Refactor: 간단한 코드냄새 제거